// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Backend.Resource.Form.Video component renders correctly 1`] = `
<div
  className="form-section"
>
  <div
    className="form-input"
  >
    <h4
      className="form-input-heading above"
    >
      Is this an externally linked video?
    </h4>
    <div
      className="toggle-indicator"
    >
      <div
        aria-pressed={false}
        className="boolean-primary"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        role="button"
        tabIndex="0"
      >
        <span
          className="screen-reader-text"
        >
          Is this an externally linked video?
        </span>
      </div>
    </div>
  </div>
  <div
    className="form-input"
  >
    <div
      className="form-input"
      style={Object {}}
    >
      <label
        className=""
        htmlFor="upload-1"
      >
        Video File
      </label>
      <react-dropzone
        accepts={
          Object {
            "accepts": "video/x-flv,video/*",
            "extensions": "mp4, webm, flv, mov, avi",
          }
        }
        className="form-dropzone style-square"
        inputProps={
          Object {
            "aria-describedby": "upload-error-1",
            "id": "upload-1",
          }
        }
        multiple={false}
        onDrop={[Function]}
      >
        <div
          className="contents-empty"
        >
          <i
            aria-hidden="true"
            className="manicon manicon-cloud-up"
          />
          <div
            className="message"
          >
            <p
              className="primary"
            >
              <span
                className="fake-link"
                role="button"
                tabIndex="0"
              >
                Upload a file
              </span>
               or 
              <br />
              drag and drop here
              <br />
            </p>
            <p
              className="secondary"
            >
              mp4, webm, flv, mov, avi
            </p>
          </div>
        </div>
      </react-dropzone>
    </div>
  </div>
</div>
`;

exports[`Backend.Resource.Form.Video component when sub kind is external_video renders correctly 1`] = `
<div
  className="form-section"
>
  <div
    className="form-input"
  >
    <h4
      className="form-input-heading above"
    >
      Is this an externally linked video?
    </h4>
    <div
      className="toggle-indicator"
    >
      <div
        aria-pressed={false}
        className="boolean-primary"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        role="button"
        tabIndex="0"
      >
        <span
          className="screen-reader-text"
        >
          Is this an externally linked video?
        </span>
      </div>
    </div>
  </div>
  <div
    className="form-section"
  >
    <div
      className="form-input"
      style={Object {}}
    >
      <label
        className=""
        htmlFor="attributes[externalId]-text-input-1"
      >
        Video ID
      </label>
      <input
        aria-describedby="attributes[externalId]-text-input-1"
        id="attributes[externalId]-text-input-1"
        onChange={[Function]}
        placeholder="Video ID"
        type="text"
        value=""
      />
    </div>
    <div
      className="form-input"
    >
      <div
        className="form-input"
        style={Object {}}
      >
        <label>
          External Video Type
        </label>
        <div
          className="form-select"
        >
          <i
            aria-hidden="true"
            className="manicon manicon-caret-down"
          />
          <select
            aria-describedby="select-error-1"
            onChange={[Function]}
            value=""
          >
            <option
              value=""
            >
              Select a video source...
            </option>
            <option
              value="youtube"
            >
              Youtube
            </option>
            <option
              value="vimeo"
            >
              Vimeo
            </option>
          </select>
        </div>
      </div>
    </div>
  </div>
</div>
`;
